@@ -1,0 +1,8 @@
+package TestsFor::Basic;
+use Test::Class::Moose;
+
+sub test_basic {
+    ok( 1, 'test ran' );
+}
+
+1;
